; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/agp/extr_backend.c_agp_remove_bridge.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/agp/extr_backend.c_agp_remove_bridge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.agp_bridge_data = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@agp_bridges = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @agp_remove_bridge(%struct.agp_bridge_data* %0) #0 {
  %2 = alloca %struct.agp_bridge_data*, align 8
  store %struct.agp_bridge_data* %0, %struct.agp_bridge_data** %2, align 8
  %3 = load %struct.agp_bridge_data*, %struct.agp_bridge_data** %2, align 8
  %4 = call i32 @agp_backend_cleanup(%struct.agp_bridge_data* %3)
  %5 = load %struct.agp_bridge_data*, %struct.agp_bridge_data** %2, align 8
  %6 = getelementptr inbounds %struct.agp_bridge_data, %struct.agp_bridge_data* %5, i32 0, i32 1
  %7 = call i32 @list_del(i32* %6)
  %8 = call i64 @list_empty(i32* @agp_bridges)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 (...) @agp_frontend_cleanup()
  br label %12

12:                                               ; preds = %10, %1
  %13 = load %struct.agp_bridge_data*, %struct.agp_bridge_data** %2, align 8
  %14 = getelementptr inbounds %struct.agp_bridge_data, %struct.agp_bridge_data* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @module_put(i32 %17)
  ret void
}

declare dso_local i32 @agp_backend_cleanup(%struct.agp_bridge_data*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i64 @list_empty(i32*) #1

declare dso_local i32 @agp_frontend_cleanup(...) #1

declare dso_local i32 @module_put(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
